# Fire-Fighter

Fire-Fighter-main/Fire-Fighter-main/: CMakeLists.txt  README.md
Fire-Fighter-main/Fire-Fighter-main/config/: settings.txt
Fire-Fighter-main/Fire-Fighter-main/src/: barrier.cpp  barrier.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  enemywave.cpp  enemywave.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  metrics.cpp  metrics.h  player.cpp  player.h  powerup.cpp  powerup.h  settings.cpp  settings.h  ui.cpp  ui.h
